; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/libevent/test/extr_regress.gen.c_kill_action_get.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/libevent/test/extr_regress.gen.c_kill_action_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kill = type { i32, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kill_action_get(%struct.kill* %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.kill*, align 8
  %5 = alloca i8**, align 8
  store %struct.kill* %0, %struct.kill** %4, align 8
  store i8** %1, i8*** %5, align 8
  %6 = load %struct.kill*, %struct.kill** %4, align 8
  %7 = getelementptr inbounds %struct.kill, %struct.kill* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = icmp ne i32 %8, 1
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %16

11:                                               ; preds = %2
  %12 = load %struct.kill*, %struct.kill** %4, align 8
  %13 = getelementptr inbounds %struct.kill, %struct.kill* %12, i32 0, i32 1
  %14 = load i8*, i8** %13, align 8
  %15 = load i8**, i8*** %5, align 8
  store i8* %14, i8** %15, align 8
  store i32 0, i32* %3, align 4
  br label %16

16:                                               ; preds = %11, %10
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
